# smartoris-gestures

./: Cargo.toml  Justfile  README.md
src/: gestures.rs  lib.rs
src/engines/: mod.rs  simple.rs
