cargo-features = ["resolver"]

[package]
name = "smartoris-gestures"
version = "0.1.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
resolver = "2"
repository = "https://github.com/smartoris/smartoris-gestures"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = """
Hand gestures sensing library for Drone OS.
"""

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
std = ["drone-core/std", "futures/std"]

[dependencies]
drone-core = { version = "0.12.0", path = "../../drone-os/drone-core" }
futures = { version = "0.3.0", default-features = false }
